<resources>
    <string name="app_name">Animalogistics</string>

    //login
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="campo_obligatorio_Correo">El Correo es obligatorio</string>
    <string name="campo_obligatorio_Contrasena">La Contraseña es obligatoria</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="campo_obligatorio_Apellido">El apellido es obligatorio</string>
    <string name="campo_obligatorio_Nombre">El nombre es obligatorio</string>
    <string name="campo_obligatorio_Telefono">El telefono es obligatorio</string>
    <string name="campo_obligatorio_DNI">El DNI es obligatorio, 8 digitos</string>
    <string name="Refugios">Refugios</string>
    <string name="RegistrarAnimal">Agregar Animal</string>
    <string name="registro">Registro</string>
    <string name="actualizarPerfil">Actualizar perfil</string>
    <string name="a_cargo_de">"A cargo de : "</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="telefono_">Telefono : </string>
    <string name="dni">DNI</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="noticias">Noticias</string>
    <string name="refugios">Refugios</string>
    <string name="registrar_un_animal">Registrar un animal</string>
    <string name="fragment_listar_animal">lista de animales</string>
    <string name="fragment_detalle_noticia">Detalle de la noticia</string>
    <string name="fragment_detalle_refugio">Detalles del refugio</string>
    <string name="fragment_listar_noticia_por_refugio">Noticias del refugio</string>
    <string name="fragment_detalle_animal_por_usuario">Detalles del animal</string>
    <string name="fragment_editar_perfil">Editar perfil</string>
    <string name="fragment_detalle_animal_por_refugio">Detalles del animal</string>
    <string name="fragment_crear_refugio">Datos del refugio</string>
    <string name="fragment_gestion_refugio">Gestion del refugio</string>
    <string name="fragment_listar_tareas_disponibles_por_refugio">Tareas disponibles</string>
    <string name="fragment_editar_tarea">Editar tarea</string>
    <string name="fragment_agregar_tarea">Agregar tarea</string>
    <string name="fragment_agregar_noticia">Agregar noticia</string>
    <string name="fragment_editar_noticia">"Editar noticia "</string>
    <string name="fragment_agregar_animal_refugio">Agregar animal al refugio</string>
    <string name="edad">Edad</string>
    <string name="tamano">Tamaño</string>
    <string name="genero">Genero</string>
    <string name="collar">Collar</string>
    <string name="estado">Estado</string>
    <string name="tipo_de_animal">Tipo de animal</string>
    <string name="nombre_del_refugio">Nombre del refugio</string>
    <string name="direccion">Direccion</string>
    <string name="descripcion">Descripcion</string>
    <string name="banner_del_refugio">Banner del refugio</string>
    <string name="foto">Foto</string>
    <string name="posicion_gps">Posicion GPS</string>
    <string name="mi_posicion_actual">Mi posicion actual</string>
    <string name="mapa_para_definir_la_ubicacion_del_refugio">mapa para definir la ubicacion del refugio</string>
    <string name="mapa_para_definir_la_ubicacion_del_animal">mapa para definir la ubicacion del animal</string>
    <string name="rango_de_accion_en_metros">Rango de accion en metros</string>
    <string name="guardar">Guardar</string>
    <string name="es_un_slider_para_definir_la_edad_del_animal">Es un slider para definir la edad del animal</string>
    <string name="un_grupo_de_opciones_para_el_tama_o_del_animal_peque_o_mediano_grande">Un grupo de opciones para el tamaño del animal (Pequeño, Mediano, Grande)</string>
    <string name="pequeno">Pequeño</string>
    <string name="mediano">Mediano</string>
    <string name="grande">Grande</string>
    <string name="un_switch_para_definir_si_el_animal_tiene_collar_o_no">Un switch para definir si el animal tiene collar o no</string>
    <string name="una_lista_desplegable_para_definir_el_genero_del_animal">Una lista desplegable para definir el genero del animal</string>
    <string name="detalles">Detalles</string>
    <string name="imagen_del_animal">Imagen del animal</string>
    <string name="autor">Autor</string>
    <string name="categoria">Categoria</string>
    <string name="titulo">Titulo</string>
    <string name="contenido">Contenido</string>
    <string name="actividad">Actividad</string>
    <string name="liberar_esta_tarea">Liberar esta tarea</string>
    <string name="nadie">Nadie</string>
    <string name="agregar_nueva_tarea">Agregar nueva tarea</string>
    <string name="descripcion_del_refugio">Descripcion del refugio</string>
    <string name="llamar">Llamar</string>
    <string name="editar_el_perfil_del_usuario">editar el perfil del usuario</string>
    <string name="editar_tarea">Editar Tarea</string>
    <string name="agregar">Agregar</string>
    <string name="tareas">Tareas</string>
    <string name="animales">Animales</string>
    <string name="mis_registros">Mis registros</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="boton_para_editar_perfil">boton para editar perfil</string>
    <string name="agregar_refugio">Agregar refugio</string>
    <string name="voluntariados">Voluntariados</string>
    <string name="mis_refugios">Mis Refugios</string>
    <string name="editar_refugio">Editar refugio</string>
    <string name="registro_exitoso">Registro exitoso.</string>
    <string name="registro_fallido_intentelo_de_nuevo">Registro fallido.</string>
    <string name="perfil_actualizado">Perfil actualizado</string>
    <string name="error_actualizando_perfil">Error al actualizar perfil</string>
    <string name="animal_registrado_correctamente">Animal registrado correctamente.</string>
    <string name="problema_al_registrar">Problema al registrar</string>
    <string name="problema_al_editar">Problemas al editar</string>
    <string name="editado_correctamente">Editado correctamente</string>
    <string name="Operacion_exitosa">Operacion exitosa.</string>
    <string name="no_puede_editar_esta_tarea">No puede Editar Esta Tarea</string>
    <string name="se_prudujo_un_error">"Se prudujo un error : "</string>
    <string name="registro_borrado_exitosamente">Registro borrado exitosamente</string>
    <string name="no_se_pudo_borrar_el_registro">No se pudo borrar el registro</string>
    <string name="operacion_cancelada">Operacion cancelada</string>
    <string name="Tarea_borrada_exitosamente">Tarea borrada exitosamente</string>
    <string name="no_tiene_permisos">no tiene permiso</string>
    <string name="noticia_borrada_exitosamente">Noticia borrada exitosamente</string>
    <string name="no_puede_editar_un_refugio_que_no_le_pertenece">No puede editar un refugio que no le pertenece</string>
    <string name="no_puede_editar_esta_noticia">No se puede editar esta noticia</string>
    <string name="no_puede_borrar_esta_noticia">No se puede borrar esta noticia</string>
    <string name="noticia_creada_exitosamente">Noticia creada exitosamente</string>
    <string name="operacion_exitosa">Operacion exitosa</string>

</resources>





<!--
<string name="cat" translatable="false">
    \t\tLorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
    \n\n\t\tSuspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.
    \n\n\t\tSed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.
    \n\n\t\tAenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.
    \n\n\t\tPhasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
  </string>-->
