<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LLSidebar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgsidebar"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IMSFotoPerfilUsuario"
        android:layout_width="130dp"
        android:layout_height="135dp"

        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/fotoperfil"
        app:srcCompat="@android:drawable/ic_menu_camera"
        app:strokeColor="@color/green"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/TVCorreoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="20dp"
        android:text="@string/correo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVNombreUsuario" />

    <TextView
        android:id="@+id/TVNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/IMSFotoPerfilUsuario"
        app:layout_constraintTop_toBottomOf="@+id/BTNEditarPerfil" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/mis_refugios"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IMSFotoPerfilUsuario" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVRefugiosDuenoo"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/voluntariados"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RVRefugiosDuenoo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVRefugiosVoluntario"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/BTNMisRegistros"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:text="@string/mis_registros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RVRefugiosVoluntario" />

    <Button
        android:id="@+id/BTNAgregarRefugio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/agregar_refugio"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/IMSFotoPerfilUsuario" />

    <Button
        android:id="@+id/BTNEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/boton_para_editar_perfil"
        android:text="@string/editar_perfil"
        app:icon="@drawable/brush"
        app:layout_constraintStart_toEndOf="@+id/IMSFotoPerfilUsuario"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FABOpciones"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        app:ensureMinTouchTargetSize="true"
        app:fabCustomSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTNMisRegistros"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/baseline_settings_24" />

    <Button
        android:id="@+id/BTNCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/cerrar_sesion"
        app:layout_constraintStart_toEndOf="@+id/FABOpciones"
        app:layout_constraintTop_toBottomOf="@+id/BTNMisRegistros" />


</androidx.constraintlayout.widget.ConstraintLayout>
<!--
</LinearLayout>-->
