<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/id_svgrepo_com" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TVTitulo"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre" />

                <TextView
                    android:id="@+id/TVDetalles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/detalles" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ACIVImagen"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/imagen_del_animal"
            android:scaleType="centerCrop"
            app:backgroundTint="@color/material_on_surface_emphasis_medium"
            app:backgroundTintMode="add"
            app:srcCompat="@drawable/addphoto" />

        <TextView
            android:id="@+id/TVComentarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/descripcion" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="RtlHardcoded">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/BTNBorrarRegistroAnimal"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/eliminar"
                app:icon="@drawable/delete_icon" />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>