<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="false"
        android:focusable="true"
        android:minHeight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/TVAnimalNombre"
                        style="?attr/textAppearanceHeadline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo" />

                    <TextView
                        android:id="@+id/TVAnimalEstado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/estado" />

                    <TextView
                        android:id="@+id/TVAnimalComentarios"
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="2" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/IMGAnimalFoto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/imagen_del_animal"
                    app:backgroundTint="@color/material_on_surface_emphasis_medium"
                    app:backgroundTintMode="add"
                    app:srcCompat="@drawable/addphoto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                tools:ignore="RtlHardcoded">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BTNAnimalEditar"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/white"
                    android:text="@string/editar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#431F9D"
                    app:icon="@drawable/brush" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BTNAnimalEliminar"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/white"
                    android:text="@string/eliminar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#431F9D"
                    app:icon="@drawable/delete_icon" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>











</androidx.constraintlayout.widget.ConstraintLayout>