<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_1080px"
    android:layout_height="@dimen/_2408px"
    tools:context=".UI.auth.login.LoginActivity">


    <!--app:shapeAppearance="@style/banner"-->


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="@dimen/_1080px"
        android:layout_height="@dimen/_2408px"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="400dp"
        android:hint="@string/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/app_name"
        app:startIconDrawable="@drawable/ic_launcher_foreground">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldDos"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:hint="@string/contrasena"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        app:startIconContentDescription="@string/app_name"
        app:startIconDrawable="@drawable/ic_launcher_foreground">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/BTNIngresar"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="275dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/orange"
        android:text="Ingresar"
        android:textColor="@color/black"
        android:textColorHighlight="@color/orange"
        android:textColorHint="#FF5722"
        android:textColorLink="#FF5722"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldDos"
        app:shapeAppearance="@style/boton" />

    <Button
        android:id="@+id/BTNRegistrar"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="275dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/orange"
        android:text="Registrarse"
        android:textColor="@color/black"
        android:textColorHighlight="@color/orange"
        android:textColorHint="#FF5722"
        android:textColorLink="#FF5722"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTNIngresar"
        app:shapeAppearance="@style/boton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        app:ensureMinTouchTargetSize="true"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTNRegistrar"
        app:layout_constraintVertical_bias="0.0"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/baseline_settings_24" />


</androidx.constraintlayout.widget.ConstraintLayout>